target/generated-sources/antlr4/gramatica/ehammoParser.java
// Generated from ehammo.g4 by ANTLR 4.4
package gramatica;

  import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ehammoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__34=1, T__33=2, T__32=3, T__31=4, T__30=5, T__29=6, T__28=7, T__27=8, 
		T__26=9, T__25=10, T__24=11, T__23=12, T__22=13, T__21=14, T__20=15, T__19=16, 
		T__18=17, T__17=18, T__16=19, T__15=20, T__14=21, T__13=22, T__12=23, 
		T__11=24, T__10=25, T__9=26, T__8=27, T__7=28, T__6=29, T__5=30, T__4=31, 
		T__3=32, T__2=33, T__1=34, T__0=35, IntegerLiteral=36, ID=37, MultiLineComment=38, 
		Comment=39, Espacos=40;
	public static final String[] tokenNames = {
		"<INVALID>", "'main'", "'length'", "'new'", "'return'", "'class'", "'while'", 
		"';'", "'void'", "'{'", "'&&'", "'='", "'extends'", "'}'", "'if'", "'int'", 
		"'('", "'False'", "'*'", "'this'", "','", "'.'", "'boolean'", "'System.out.println'", 
		"'['", "'<'", "'String'", "']'", "'public'", "'True'", "'!'", "'static'", 
		"'else'", "')'", "'+'", "'-'", "IntegerLiteral", "ID", "MultiLineComment", 
		"Comment", "Espacos"
	};
	public static final int
		RULE_goal = 0, RULE_mainClass = 1, RULE_classDeclarationList = 2, RULE_classDeclaration = 3, 
		RULE_varDeclaration = 4, RULE_varDeclarationList = 5, RULE_methodDeclarationList = 6, 
		RULE_methodDeclaration = 7, RULE_formalList = 8, RULE_formal = 9, RULE_statement = 10, 
		RULE_statementList = 11, RULE_expression = 12, RULE_expressionList = 13, 
		RULE_identifier = 14, RULE_type = 15;
	public static final String[] ruleNames = {
		"goal", "mainClass", "classDeclarationList", "classDeclaration", "varDeclaration", 
		"varDeclarationList", "methodDeclarationList", "methodDeclaration", "formalList", 
		"formal", "statement", "statementList", "expression", "expressionList", 
		"identifier", "type"
	};

	@Override
	public String getGrammarFileName() { return "ehammo.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ehammoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GoalContext extends ParserRuleContext {
		public Program p;
		public MainClassContext mainClass;
		public ClassDeclarationListContext classDeclarationList;
		public TerminalNode EOF() { return getToken(ehammoParser.EOF, 0); }
		public ClassDeclarationListContext classDeclarationList() {
			return getRuleContext(ClassDeclarationListContext.class,0);
		}
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitGoal(this);
		}
	}

	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_goal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32); ((GoalContext)_localctx).mainClass = mainClass();
			setState(33); ((GoalContext)_localctx).classDeclarationList = classDeclarationList();
			setState(34); match(EOF);
			((GoalContext)_localctx).p =  new Program(((GoalContext)_localctx).mainClass.m, ((GoalContext)_localctx).classDeclarationList.cdl );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public MainClass m;
		public IdentifierContext i1;
		public IdentifierContext i2;
		public StatementContext s;
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterMainClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitMainClass(this);
		}
	}

	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37); match(T__30);
			setState(38); ((MainClassContext)_localctx).i1 = identifier();
			setState(39); match(T__26);
			setState(40); match(T__7);
			setState(41); match(T__4);
			setState(42); match(T__27);
			setState(43); match(T__34);
			setState(44); match(T__19);
			setState(45); match(T__9);
			setState(46); match(T__11);
			setState(47); match(T__8);
			setState(48); ((MainClassContext)_localctx).i2 = identifier();
			setState(49); match(T__2);
			setState(50); match(T__26);
			setState(51); ((MainClassContext)_localctx).s = statement();
			setState(52); match(T__22);
			setState(53); match(T__22);
			((MainClassContext)_localctx).m =  new MainClass(((MainClassContext)_localctx).i1.id,((MainClassContext)_localctx).i2.id,((MainClassContext)_localctx).s.s);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationListContext extends ParserRuleContext {
		public ClassDeclList cdl;
		public ClassDeclarationContext cd;
		public ClassDeclarationListContext c;
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public ClassDeclarationListContext classDeclarationList() {
			return getRuleContext(ClassDeclarationListContext.class,0);
		}
		public ClassDeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclarationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterClassDeclarationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitClassDeclarationList(this);
		}
	}

	public final ClassDeclarationListContext classDeclarationList() throws RecognitionException {
		ClassDeclarationListContext _localctx = new ClassDeclarationListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDeclarationList);
		try {
			setState(61);
			switch (_input.LA(1)) {
			case T__30:
				enterOuterAlt(_localctx, 1);
				{
				setState(56); ((ClassDeclarationListContext)_localctx).cd = classDeclaration();
				setState(57); ((ClassDeclarationListContext)_localctx).c = classDeclarationList();
				((ClassDeclarationListContext)_localctx).c.cdl.addElement(((ClassDeclarationListContext)_localctx).cd.cd);((ClassDeclarationListContext)_localctx).cdl = ((ClassDeclarationListContext)_localctx).c.cdl;
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				((ClassDeclarationListContext)_localctx).cdl =  new ClassDeclList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public ClassDecl cd;
		public IdentifierContext i1;
		public VarDeclarationListContext v;
		public MethodDeclarationListContext md;
		public IdentifierContext i2;
		public MethodDeclarationListContext methodDeclarationList() {
			return getRuleContext(MethodDeclarationListContext.class,0);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public VarDeclarationListContext varDeclarationList() {
			return getRuleContext(VarDeclarationListContext.class,0);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitClassDeclaration(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDeclaration);
		try {
			setState(81);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(63); match(T__30);
				setState(64); ((ClassDeclarationContext)_localctx).i1 = identifier();
				setState(65); match(T__26);
				setState(66); ((ClassDeclarationContext)_localctx).v = varDeclarationList(0);
				setState(67); ((ClassDeclarationContext)_localctx).md = methodDeclarationList();
				setState(68); match(T__22);
				((ClassDeclarationContext)_localctx).cd =  new ClassDeclSimple(((ClassDeclarationContext)_localctx).i1.id,((ClassDeclarationContext)_localctx).v.varl,((ClassDeclarationContext)_localctx).md.mdl);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71); match(T__30);
				setState(72); ((ClassDeclarationContext)_localctx).i1 = identifier();
				setState(73); match(T__23);
				setState(74); ((ClassDeclarationContext)_localctx).i2 = identifier();
				setState(75); match(T__26);
				setState(76); ((ClassDeclarationContext)_localctx).v = varDeclarationList(0);
				setState(77); ((ClassDeclarationContext)_localctx).md = methodDeclarationList();
				setState(78); match(T__22);
				((ClassDeclarationContext)_localctx).cd =  new ClassDeclExtends(((ClassDeclarationContext)_localctx).i1.id,((ClassDeclarationContext)_localctx).i2.id,((ClassDeclarationContext)_localctx).v.varl,((ClassDeclarationContext)_localctx).md.mdl);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public VarDecl var;
		public TypeContext t1;
		public IdentifierContext i;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); ((VarDeclarationContext)_localctx).t1 = type();
			setState(84); ((VarDeclarationContext)_localctx).i = identifier();
			setState(85); match(T__28);
			((VarDeclarationContext)_localctx).var =  new VarDecl(((VarDeclarationContext)_localctx).t1.t,((VarDeclarationContext)_localctx).i.id);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationListContext extends ParserRuleContext {
		public VarDeclList varl;
		public VarDeclarationListContext vl;
		public VarDeclarationContext v;
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public VarDeclarationListContext varDeclarationList() {
			return getRuleContext(VarDeclarationListContext.class,0);
		}
		public VarDeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclarationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterVarDeclarationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitVarDeclarationList(this);
		}
	}

	public final VarDeclarationListContext varDeclarationList() throws RecognitionException {
		return varDeclarationList(0);
	}

	private VarDeclarationListContext varDeclarationList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VarDeclarationListContext _localctx = new VarDeclarationListContext(_ctx, _parentState);
		VarDeclarationListContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_varDeclarationList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			((VarDeclarationListContext)_localctx).varl =  new VarDeclList();
			}
			_ctx.stop = _input.LT(-1);
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VarDeclarationListContext(_parentctx, _parentState);
					_localctx.vl = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_varDeclarationList);
					setState(91);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(92); ((VarDeclarationListContext)_localctx).v = varDeclaration();
					((VarDeclarationListContext)_localctx).vl.varl.addElement(((VarDeclarationListContext)_localctx).v.var);((VarDeclarationListContext)_localctx).varl = ((VarDeclarationListContext)_localctx).vl.varl;
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MethodDeclarationListContext extends ParserRuleContext {
		public MethodDeclList mdl;
		public MethodDeclarationContext md;
		public MethodDeclarationListContext m;
		public MethodDeclarationListContext methodDeclarationList() {
			return getRuleContext(MethodDeclarationListContext.class,0);
		}
		public MethodDeclarationContext methodDeclaration() {
			return getRuleContext(MethodDeclarationContext.class,0);
		}
		public MethodDeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclarationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterMethodDeclarationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitMethodDeclarationList(this);
		}
	}

	public final MethodDeclarationListContext methodDeclarationList() throws RecognitionException {
		MethodDeclarationListContext _localctx = new MethodDeclarationListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodDeclarationList);
		try {
			setState(105);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(100); ((MethodDeclarationListContext)_localctx).md = methodDeclaration();
				setState(101); ((MethodDeclarationListContext)_localctx).m = methodDeclarationList();
				((MethodDeclarationListContext)_localctx).m.mdl.addElement(((MethodDeclarationListContext)_localctx).md.md);((MethodDeclarationListContext)_localctx).mdl = ((MethodDeclarationListContext)_localctx).m.mdl;
				}
				break;
			case T__22:
				enterOuterAlt(_localctx, 2);
				{
				((MethodDeclarationListContext)_localctx).mdl =  new MethodDeclList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclarationContext extends ParserRuleContext {
		public MethodDecl md;
		public TypeContext t1;
		public IdentifierContext i;
		public FormalListContext f;
		public VarDeclarationListContext v;
		public StatementListContext s;
		public ExpressionContext e;
		public FormalListContext formalList() {
			return getRuleContext(FormalListContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public VarDeclarationListContext varDeclarationList() {
			return getRuleContext(VarDeclarationListContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterMethodDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitMethodDeclaration(this);
		}
	}

	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_methodDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); match(T__7);
			setState(108); ((MethodDeclarationContext)_localctx).t1 = type();
			setState(109); ((MethodDeclarationContext)_localctx).i = identifier();
			setState(110); match(T__19);
			setState(111); ((MethodDeclarationContext)_localctx).f = formalList();
			setState(112); match(T__2);
			setState(113); match(T__26);
			setState(114); ((MethodDeclarationContext)_localctx).v = varDeclarationList(0);
			setState(115); ((MethodDeclarationContext)_localctx).s = statementList();
			setState(116); match(T__31);
			setState(117); ((MethodDeclarationContext)_localctx).e = expression(0);
			setState(118); match(T__28);
			setState(119); match(T__22);
			((MethodDeclarationContext)_localctx).md =  new MethodDecl(((MethodDeclarationContext)_localctx).t1.t,((MethodDeclarationContext)_localctx).i.id,((MethodDeclarationContext)_localctx).f.fl,((MethodDeclarationContext)_localctx).v.varl,((MethodDeclarationContext)_localctx).s.stm,((MethodDeclarationContext)_localctx).e.expr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalListContext extends ParserRuleContext {
		public FormalList fl;
		public FormalContext f;
		public FormalListContext ft;
		public FormalListContext formalList() {
			return getRuleContext(FormalListContext.class,0);
		}
		public FormalContext formal() {
			return getRuleContext(FormalContext.class,0);
		}
		public FormalListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterFormalList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitFormalList(this);
		}
	}

	public final FormalListContext formalList() throws RecognitionException {
		FormalListContext _localctx = new FormalListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_formalList);
		try {
			setState(131);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122); ((FormalListContext)_localctx).f = formal();
				setState(123); match(T__15);
				setState(124); ((FormalListContext)_localctx).ft = formalList();
				((FormalListContext)_localctx).ft.fl.addElement(((FormalListContext)_localctx).f.f); ((FormalListContext)_localctx).fl = ((FormalListContext)_localctx).ft.fl;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127); ((FormalListContext)_localctx).f = formal();
				((FormalListContext)_localctx).fl = new FormalList();_localctx.fl.addElement(((FormalListContext)_localctx).f.f);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				((FormalListContext)_localctx).fl = new FormalList();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalContext extends ParserRuleContext {
		public Formal f;
		public TypeContext t1;
		public IdentifierContext i;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public FormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterFormal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitFormal(this);
		}
	}

	public final FormalContext formal() throws RecognitionException {
		FormalContext _localctx = new FormalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_formal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); ((FormalContext)_localctx).t1 = type();
			setState(134); ((FormalContext)_localctx).i = identifier();
			((FormalContext)_localctx).f =  new Formal(((FormalContext)_localctx).t1.t,((FormalContext)_localctx).i.id);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Statement s;
		public StatementListContext stm;
		public ExpressionContext e;
		public StatementContext st1;
		public StatementContext st2;
		public IdentifierContext i;
		public ExpressionContext e1;
		public ExpressionContext e2;
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ehammoListener ) ((ehammoListener)listener).exitStatement(this);
		}
	}
